👀 优化 新增Text作为返回信息 base64上传方式
代码规范

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -388,6 +388,7 @@
 	"Memory cleared successfully": "记忆清除成功",
 	"Memory deleted successfully": "记忆删除成功",
 	"Memory updated successfully": "记忆更新成功",
+	"Message Filter": "消息过滤",
 	"Message Filter Settings": "消息过滤器设置",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "创建链接后发送的消息不会被共享。具有 URL 的用户将能够查看共享对话。",
 	"Min P": "Min P",
@@ -558,6 +559,7 @@
 	"Select Documents": "选择文档",
 	"Select model": "选择模型",
 	"Select only one model to call": "请仅选择一个模型来呼叫",
+	"Select restricted message warning acceptance type": "选择受限消息警告接受类型",
 	"Selected model(s) do not support image inputs": "已选择的模型不支持发送图像",
 	"Send": "发送",
 	"Send a Message": "输入消息",
