--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -390,6 +390,7 @@
 	"Memory cleared successfully": "已成功清除記憶體",
 	"Memory deleted successfully": "已成功刪除記憶體",
 	"Memory updated successfully": "記憶體已成功更新",
+	"Message Filter": "訊息過濾",
 	"Message Filter Settings": "郵件過濾器設置",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "建立連結後傳送的訊息將不會被共享。具有 URL 的使用者將會能夠檢視共享的聊天。",
 	"Min P": "",
@@ -560,6 +561,7 @@
 	"Select Documents": "選擇文件",
 	"Select model": "選擇模型",
 	"Select only one model to call": "僅選擇一個模型來呼叫",
+	"Select restricted message warning acceptance type": "選擇受限訊息警告接受類型",
 	"Selected model(s) do not support image inputs": "已選擇模型不支援影像輸入",
 	"Send": "傳送",
 	"Send a Message": "傳送訊息",
