优化html样式渲染合和预览
优化html样式渲染合和预览

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -120,6 +120,7 @@
 	"Clone": "复制",
 	"Close": "关闭",
 	"Code formatted successfully": "代码格式化成功",
+	"Collapse": "收起",
 	"Collection": "集合",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "ComfyUI 基础地址",
@@ -268,6 +269,7 @@
 	"Enter your message": "输入您的消息",
 	"Enter Your Password": "输入您的密码",
 	"Enter Your Role": "输入您的权限组",
+	"Expand": "展开",
 	"Error": "错误",
 	"Experimental": "实验性",
 	"Export": "导出",
@@ -481,6 +483,7 @@
 	"Playground": "AI 对话游乐场",
 	"Please carefully review the following warnings:": "请仔细阅读以下警告信息：",
 	"Positive attitude": "积极的态度",
+	"Preview": "预览",
 	"Previous 30 days": "过去 30 天",
 	"Previous 7 days": "过去 7 天",
 	"Profile Image": "用户头像",
@@ -499,6 +502,7 @@
 	"Record voice": "录音",
 	"Redirecting you to OpenWebUI Community": "正在将您重定向到 OpenWebUI 社区",
 	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "使用\"User\" (用户) 来指代自己（例如：“User 正在学习西班牙语”）",
+	"Refresh": "刷新",
 	"Refused when it shouldn't have": "无理拒绝",
 	"Regenerate": "重新生成",
 	"Release Notes": "更新日志",
