--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -120,6 +120,7 @@
 	"Clone": "複製",
 	"Close": "關閉",
 	"Code formatted successfully": "成功格式化程式碼",
+	"Collapse": "收起",
 	"Collection": "收藏",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "ComfyUI 基礎 URL",
@@ -269,6 +270,7 @@
 	"Enter Your Password": "輸入您的密碼",
 	"Enter Your Role": "輸入您的角色",
 	"Error": "錯誤",
+	"Expand": "展開",
 	"Experimental": "實驗性功能",
 	"Export": "匯出",
 	"Export All Chats (All Users)": "匯出所有對話紀錄（所有使用者）",
@@ -481,6 +483,7 @@
 	"Playground": "遊樂場",
 	"Please carefully review the following warnings:": "請仔細閱讀以下警告：",
 	"Positive attitude": "積極的態度",
+	"Preview": "預覽",
 	"Previous 30 days": "過去 30 天",
 	"Previous 7 days": "過去 7 天",
 	"Profile Image": "個人檔案圖片",
@@ -499,6 +502,7 @@
 	"Record voice": "錄音",
 	"Redirecting you to OpenWebUI Community": "正在將您重新導向到 OpenWebUI 社群",
 	"Refer to yourself as \"User\" (e.g., \"User is learning Spanish\")": "以「使用者」稱呼自己（例如：「使用者正在學習西班牙文」）",
+	"Refresh": "刷新",
 	"Refused when it shouldn't have": "不應拒絕時拒絕了",
 	"Regenerate": "重新產生",
 	"Release Notes": "發布說明",
