✨ 优化代码显示的i18
✨ 优化代码显示的i18

--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -139,7 +139,9 @@
 	"Continue with {{provider}}": "使用 {{provider}} 繼續",
 	"Controls": "控制項",
 	"Copied shared chat URL to clipboard!": "已複製共用對話 URL 到剪貼簿！",
+	"Copied": "已複製✨",
 	"Copy": "複製",
+	"Copy Code": "複製程式碼",
 	"Copy last code block": "複製最後一個程式碼區塊",
 	"Copy last response": "複製最後一個回應",
 	"Copy Link": "複製連結",
@@ -524,6 +526,7 @@
 	"Rosé Pine": "玫瑰松",
 	"Rosé Pine Dawn": "黎明玫瑰松",
 	"RTL": "從右到左",
+	"Run": "執行",
 	"Run Llama 2, Code Llama, and other models. Customize and create your own.": "執行 Llama 2、Code Llama 和其他模型。自訂並建立您自己的模型。",
 	"Running": "運作中",
 	"Save": "儲存",
@@ -606,6 +609,7 @@
 	"Speech recognition error: {{error}}": "語音辨識錯誤：{{error}}",
 	"Speech-to-Text Engine": "語音轉文字 (STT) 引擎",
 	"Stop Sequence": "停止序列",
+	"STDOUT/STDERR": "標準輸出/標準誤差",
 	"STT Model": "語音轉文字 (STT) 模型",
 	"STT Settings": "語音轉文字 (STT) 設定",
 	"Submit": "提交",
