--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -139,7 +139,9 @@
 	"Continue with {{provider}}": "使用 {{provider}} 继续",
 	"Controls": "对话高级设置",
 	"Copied shared chat URL to clipboard!": "已复制此对话分享链接至剪贴板！",
+	"Copied": "已复制✨",
 	"Copy": "复制",
+	"Copy Code": "复制代码",
 	"Copy last code block": "复制最后一个代码块中的代码",
 	"Copy last response": "复制最后一次回复内容",
 	"Copy Link": "复制链接",
@@ -524,6 +526,7 @@
 	"Rosé Pine": "玫瑰紫",
 	"Rosé Pine Dawn": "玫瑰粉",
 	"RTL": "从右至左",
+	"Run": "執行",
 	"Run Llama 2, Code Llama, and other models. Customize and create your own.": "运行 Llama 2、Code Llama 和其他模型。自定义和创建您自己的模型。",
 	"Running": "运行中",
 	"Save": "保存",
@@ -606,6 +609,7 @@
 	"Speech recognition error: {{error}}": "语音识别错误：{{error}}",
 	"Speech-to-Text Engine": "语音转文本引擎",
 	"Stop Sequence": "停止序列 (Stop Sequence)",
+	"STDOUT/STDERR": "标准输出/标准错误",
 	"STT Model": "语音转文本模型",
 	"STT Settings": "语音转文本设置",
 	"Submit": "提交",
