--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -526,7 +526,7 @@
 	"Rosé Pine": "玫瑰紫",
 	"Rosé Pine Dawn": "玫瑰粉",
 	"RTL": "从右至左",
-	"Run": "執行",
+	"Run": "运行",
 	"Run Llama 2, Code Llama, and other models. Customize and create your own.": "运行 Llama 2、Code Llama 和其他模型。自定义和创建您自己的模型。",
 	"Running": "运行中",
 	"Save": "保存",
